2001-04-11  Sam Steingold  <sds@gnu.org>

	Merged FLET with SYS::%FLET (same for LABELS & MACROLET)
	* init.lisp (flet, labels, macrolet): removed
	(%expand-form): removed flet, labels and macrolet
	do not load "defs3"
	* defs3.lisp: removed
	* compiler.lisp (skip-declarations): new function
	(c-flet, c-labels, c-macrolet): use it
	* constsym.d (pflet, plabels, pmacrolet): removed
	* control.d (skip_declarations): new function

2001-04-10  Bruno Haible  <haible@clisp.cons.org>

	Support for MacOS X.
	* lispbibl.d (RS6000): Define if __ppc__ is defined.
	(TIME_ABSOLUTE, TIME_RELATIVE): Undefine after pulling in the system
	headers.
	* socket.d (in6_u, u6_addr16) [UNIX_DARWIN]: Define as aliases.
	Thanks to Daniel Buenzli and Sunil Mishra for feedback.

2001-04-09  Sam Steingold  <sds@gnu.org>

	* spvw.d (*features*): added :LISP=CL to denote the re-packaging

2001-04-09  Sam Steingold  <sds@gnu.org>

	* type.lisp (upgraded-complex-part-type): ANSI CL compliance -
	trivial function, always returns T
	* init.lisp (upgraded-complex-part-type): exported

2001-04-09  Sam Steingold  <sds@gnu.org>

	* init.lisp (sys::*home-package*): set to NIL at the end

2001-04-06  Sam Steingold  <sds@gnu.org>

	The grand repackaging: USER+CL-USER; LISP+CL
	* amigasock.lisp, beossock.lisp: no export (done in init.lisp)
	* cfgacorn.lisp, cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp,
	cfgunix.lisp, cfgwin32.lisp, clhs.lisp: (in-package "EXT")
	* clos.lisp: use I18N temporarily (for ENGLISH)
	* compiler.lisp (c-form-table): treat sys::%flet and friends just
	like cl:flet and friends
	* condition.lisp: moved CLISP extensions, like `muffle-cerrors',
	to the EXT package
	* constobj.d (use_default): set to COMMON-LISP
	* constpack.d: added EXT, I18N, GRAY and CUSTOM,
	and, conditionally, LDAP, SOCKET and GSTREAM
	* constsym.d: moved CLISP extensions to EXT or a more specific
	package, if appropriate
	* control.d, fsubr.d:
	renamed flet->%flet; labels->%labels; macrolet->%macrolet